# python-openstackmcp-server

./: .env.sample  .gitignore  CONTRIBUTING.rst  README.md  my_first_os_mcp.py  pyproject.toml
src/openstack_mcp_server/: __init__.py  __main__.py  config.py  server.py
src/openstack_mcp_server/tools/: __init__.py  base.py  block_storage_tools.py  compute_tools.py  glance_tools.py  identity_tools.py  image_tools.py  keystone_tools.py  network_tools.py  neutron_tools.py  nova_tools.py
src/openstack_mcp_server/tools/request/: network.py
src/openstack_mcp_server/tools/response/: block_storage.py  compute.py  identity.py  keystone.py  nova.py
tests/: conftest.py
tests/tools/: test_block_storage_tools.py  test_compute_tools.py  test_glance_tools.py  test_identity_tools.py  test_image_tools.py  test_keystone_tools.py  test_network_tools.py  test_neutron_tools.py  test_nova_tools.py
